--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,16 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Open+Sans:wght@600&display=swap');
+
 * {
   padding: 0;
   box-sizing : border-box;
   font-weight : 600;
   margin : 0;
-  font-family : -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  /* font-family : -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+    sans-serif; */
+    font-family: 'Montserrat', sans-serif;
+    font-family: 'Open Sans', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -22,6 +27,7 @@ code {
   box-shadow: 0 2px 6px #555;
   margin: 50px auto;
   padding: 50px;
+  background-color:  #e0f2fe;
 
 }
 
@@ -30,7 +36,9 @@ h1{
   text-transform: uppercase;
   letter-spacing: 2px;
   font-weight: 900;
-  color: #666;
+  color: #134e4a;
+  font-family: 'Montserrat', sans-serif;
+  font-family: 'Open Sans', sans-serif;
 }
 
 form{
@@ -48,21 +56,21 @@ form button{
   outline: none;
   border: 1px solid #555;
   margin: 0 5px;
-  color: #ccc;
+  color: black;
   letter-spacing: 2px;
   cursor: pointer;
 }
 
 form button{
   flex:1;
-  background-color: #555;
+  background-color: #134e4a;
   color:white;
   letter-spacing: 2px;
   cursor: pointer;
 }
 ul li{
   list-style: none;
-  border: 1px solid #ccc;
+ /* border: 1px solid #ccc; */
   margin: 10px 0;
   padding: 10 px;
   display: flex;
@@ -81,6 +89,7 @@ ul li input,
 .row input{
   margin-right: 5px;
   transform : translateY(1px);
+  padding-top: 2rem;
 }
 
 ul li button,
@@ -88,12 +97,19 @@ ul li button,
   border: non;
   outline: none;
   color: white;
-  background: orange;
+  background: #115e59;
   padding: 5px 15px;
   cursor: pointer;
 
 }
 
+.hero-img{
+  max-width:350px;
+  display: block;
+  margin: auto;
+ padding : 2rem;
+
+}
 ul li button:disabled{
 opacity: 0.5;
 cursor: not-allowed;
@@ -109,4 +125,14 @@ cursor: not-allowed;
 .row #delete
 {
   background: crimson;
+}
+
+@media (max-width: 400px){
+  .App{
+    padding: 10px;
+  }
+}
+h2{
+  text-align: center;
+  color: #134e4a;
 }
